Tests for graphs